# btcpro

./: .env  .env.example  .gitignore  MASTER_PLAN.md  README.md  STATUS.md  pyproject.toml  run_all.py
.claude/: settings.local.json
app/: bus.py  config.py  contract.py  models.py
app/api/: main.py
app/books/: binance_local_book.py
app/collectors/: base.py  binance_futures.py  binance_open_interest.py  binance_spot.py  bybit.py
app/features/: engine.py  rolling.py  scoring.py  validation.py
btc_microstructure_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dashboard/: app.py  figures.py
dashboard/assets/: dashboard.css
tests/: test_api.py  test_binance_futures_collector.py  test_binance_local_book.py  test_binance_spot_collector.py  test_feature_engine.py  test_open_interest_poller.py  test_scoring.py  test_smoke.py  test_validation.py
